Prod-EU/force-app/main/default/objects/Related_Account__c/Related_Account__c.object-meta.xml
<CustomObject>
    <description>Jagan 04/25/2017 - Object holds many to many relationship between Accounts.</description>
    <label>Related Account</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>