Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field holds the child account (Prescriber) information</description>
    <label>Child Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Prescriber, Facility, Pharmacy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Accounts</relationshipLabel>
    <relationshipName>Related_Child_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>