Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Child_Account_Top_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account_Top_Parent_Account__c</fullName>
    <formula>Child_Account__r.OK_Top_Level_Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Parent Account</label>
    <type>Text</type>
</CustomField>