Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Child_Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>Child_Relation_Type__c</fullName>
    <description>Record type corresponding to the Child Account in the relationship.</description>
    <formula>MID(Child_Account__r.RecordType.Name, 4, LEN(Child_Account__r.RecordType.Name))</formula>
    <label>Child Relation Type</label>
    <type>Text</type>
</CustomField>