Prod-EU/force-app/main/default/objects/Related_Account__c/fields/OK_Fax__c.field-meta.xml
<CustomField>
    <fullName>OK_Fax__c</fullName>
    <description>OneKey - Records Fax number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>