Prod-EU/force-app/main/default/objects/Related_Account__c/fields/OK_Phone__c.field-meta.xml
<CustomField>
    <fullName>OK_Phone__c</fullName>
    <description>OneKey - Records Phone number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>