Prod-EU/force-app/main/default/objects/Related_Account__c/fields/OK_Relation_Deleted__c.field-meta.xml
<CustomField>
    <fullName>OK_Relation_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OneKey - Tracks when the relation is deleted</description>
    <label>Relation Deleted</label>
    <type>Checkbox</type>
</CustomField>