Prod-EU/force-app/main/default/objects/Related_Account__c/fields/OK_Relation_Link__c.field-meta.xml
<CustomField>
    <fullName>OK_Relation_Link__c</fullName>
    <description>OneKey - Relation Link</description>
    <label>Relation Link</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Belongs to Practice house</fullName>
            </value>
            <value>
                <fullName>Belongs to Medical equipment group</fullName>
            </value>
            <value>
                <fullName>Belongs to Practice / MVZ</fullName>
            </value>
            <value>
                <fullName>Is duplicate of</fullName>
            </value>
            <value>
                <fullName>Supplied by - DRK -</fullName>
            </value>
            <value>
                <fullName>Belongs to Buying Group - medical</fullName>
            </value>
            <value>
                <fullName>Belongs to Buying Group - pharma</fullName>
            </value>
            <value>
                <fullName>Belongs to Buying Group - sanitary</fullName>
            </value>
            <value>
                <fullName>Is affiliate of</fullName>
            </value>
            <value>
                <fullName>Belongs to Franchise company</fullName>
            </value>
            <value>
                <fullName>Belongs to Hospital Group - GRP -</fullName>
            </value>
            <value>
                <fullName>Is managed by</fullName>
            </value>
            <value>
                <fullName>Belongs to Hospitals - KLI -</fullName>
            </value>
            <value>
                <fullName>Is affiliated to hospitals</fullName>
            </value>
            <value>
                <fullName>Has for main workplace</fullName>
            </value>
            <value>
                <fullName>Belongs to Group of practices</fullName>
            </value>
            <value>
                <fullName>Is relocated to</fullName>
            </value>
            <value>
                <fullName>Belongs to Service center</fullName>
            </value>
            <value>
                <fullName>Belongs to Management company</fullName>
            </value>
            <value>
                <fullName>Belongs to Interlocational union</fullName>
            </value>
            <value>
                <fullName>Supplied by - VAB -</fullName>
            </value>
            <value>
                <fullName>Supplied by - VAS -</fullName>
            </value>
            <value>
                <fullName>Supplied by - VER -</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>