Prod-EU/force-app/main/default/objects/Related_Account__c/fields/OK_Relation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OK_Relation_Start_Date__c</fullName>
    <description>OneKey - Relation start date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relation Start Date</label>
    <type>Date</type>
</CustomField>