Prod-EU/force-app/main/default/objects/Related_Account__c/fields/OK_Role_1__c.field-meta.xml
<CustomField>
    <fullName>OK_Role_1__c</fullName>
    <description>OneKey - Records Role 1</description>
    <label>Role 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consulting Physician</fullName>
            </value>
            <value>
                <fullName>Head of Public Health Department</fullName>
            </value>
            <value>
                <fullName>Head of office (deputy)</fullName>
            </value>
            <value>
                <fullName>Nursing Director (deputy)</fullName>
            </value>
            <value>
                <fullName>Kitchen Manager</fullName>
            </value>
            <value>
                <fullName>Head of housing</fullName>
            </value>
            <value>
                <fullName>Freelancer</fullName>
            </value>
            <value>
                <fullName>Pharmacie Staff</fullName>
            </value>
            <value>
                <fullName>Admiral Doctor</fullName>
            </value>
            <value>
                <fullName>Admiral Colonel medical officer</fullName>
            </value>
            <value>
                <fullName>Admiral Medical officer</fullName>
            </value>
            <value>
                <fullName>Medical head</fullName>
            </value>
            <value>
                <fullName>Fleet doctor</fullName>
            </value>
            <value>
                <fullName>Flotila doctor</fullName>
            </value>
            <value>
                <fullName>Doctor General</fullName>
            </value>
            <value>
                <fullName>Field-grade pharmacist (Military)</fullName>
            </value>
            <value>
                <fullName>Field-grade physician (Military)</fullName>
            </value>
            <value>
                <fullName>Colonel  Pharmacist</fullName>
            </value>
            <value>
                <fullName>Training Doctor</fullName>
            </value>
            <value>
                <fullName>Pharmacist (Military)</fullName>
            </value>
            <value>
                <fullName>Medical Director (deputy)</fullName>
            </value>
            <value>
                <fullName>Medical head (deputy)</fullName>
            </value>
            <value>
                <fullName>Director of administration</fullName>
            </value>
            <value>
                <fullName>Fee-based physician</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Professor</fullName>
            </value>
            <value>
                <fullName>Secretary general</fullName>
            </value>
            <value>
                <fullName>Chairmann (deputy)</fullName>
            </value>
            <value>
                <fullName>Manager (deputy)</fullName>
            </value>
            <value>
                <fullName>Operations Head (deputy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>