Prod-EU/force-app/main/default/objects/Related_Account__c/fields/OK_Status__c.field-meta.xml
<CustomField>
    <fullName>OK_Status__c</fullName>
    <description>OneKey - Status like Valid, Invalid, Provisional</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>