Prod-EU/force-app/main/default/objects/Related_Account__c/fields/OK_Working_Status__c.field-meta.xml
<CustomField>
    <fullName>OK_Working_Status__c</fullName>
    <label>Working Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Market Access</fullName>
            </value>
            <value>
                <fullName>Regular Substitute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>