Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field holds the parent account information</description>
    <label>Parent Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Facility, Hospital, Payor, Pharmacy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Accounts</relationshipLabel>
    <relationshipName>Related_Parent_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>