Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Parent_Account_Location__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Location__c</fullName>
    <description>Parent account location</description>
    <formula>Parent_Account__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Location</label>
    <type>Text</type>
</CustomField>