Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Parent_Account_Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Structure_Type__c</fullName>
    <description>Points to parent account structure type</description>
    <formula>Text(Parent_Account__r.OK_Structure_Type_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Structure Type</label>
    <type>Text</type>
</CustomField>