Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Parent_Account_Top_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Top_Parent_Account__c</fullName>
    <description>Refers to the Top level parent account corresponding to the parent account</description>
    <formula>Parent_Account__r.Top_Level_Parent_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Parent Account</label>
    <type>Text</type>
</CustomField>