Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Parent_Child_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Child_Id__c</fullName>
    <description>Concatenates the child and parent account ids</description>
    <formula>Child_Account__c +&apos;-&apos;+  Parent_Account__c</formula>
    <label>Parent Child Id</label>
    <type>Text</type>
</CustomField>