Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Parent_Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Relation_Type__c</fullName>
    <description>Record type corresponding to the Parent Account in the relationship.</description>
    <formula>MID(Parent_Account__r.RecordType.Name, 4, LEN(Parent_Account__r.RecordType.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Relation Type</label>
    <type>Text</type>
</CustomField>