Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Payor_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Payor_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing address tied to the Payor</description>
    <label>Payor Billing Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Parent_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Address__c.Type__c</field>
            <operation>equals</operation>
            <value>Bill To</value>
        </filterItems>
        <infoMessage>Address does not belong to the Payor.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>Related_Account_Payor_Address</relationshipName>
    <type>Lookup</type>
</CustomField>