Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Payor_Billing_Address_Full_Text__c.field-meta.xml
<CustomField>
    <fullName>Payor_Billing_Address_Full_Text__c</fullName>
    <description>Displays the full text of the address</description>
    <formula>IF(NOT(ISBLANK(Payor_Billing_Address__c)), (Payor_Billing_Address__r.Address_Line_1__c &amp; &apos;, &apos; &amp; Payor_Billing_Address__r.City__c &amp; &apos;, &apos; &amp; Payor_Billing_Address__r.Postal_Code__c &amp; &apos;, &apos; &amp; Text(Payor_Billing_Address__r.Country__c)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payor Billing Address</label>
    <type>Text</type>
</CustomField>