Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <description>This field will track the preferred email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Email</label>
    <type>Email</type>
</CustomField>