Prod-EU/force-app/main/default/objects/Related_Account__c/fields/Prescriber_Operations_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Operations_Site_Number__c</fullName>
    <formula>Parent_Account__r.Facility_Number__c</formula>
    <label>Prescriber Operations Site Number</label>
    <type>Text</type>
</CustomField>