Prod-EU/force-app/main/default/objects/Related_Account__c/validationRules/Check_If_Both_Med_Fac_Prescriber_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_If_Both_Med_Fac_Prescriber_Exist</fullName>
    <active>true</active>
    <description>Rule checks if both Medical Facility and Prescriber information are filled in before saving the record.</description>
    <errorConditionFormula>OR(
ISBLANK( Parent_Account__c ),
ISBLANK( Child_Account__c )
)</errorConditionFormula>
    <errorMessage>Medical Facility and Prescriber Information are Required.</errorMessage>
</ValidationRule>