Prod-EU/force-app/main/default/objects/Related_Account__c/validationRules/Check_If_Both_Parent_Child_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_If_Both_Parent_Child_Exist</fullName>
    <active>true</active>
    <description>Rule checks if both Parent and Child accounts are filled in before saving the record.</description>
    <errorConditionFormula>OR( 
ISBLANK( Parent_Account__c ), 
ISBLANK( Child_Account__c ) 
)</errorConditionFormula>
    <errorMessage>Parent and Child Accounts must be selected.</errorMessage>
</ValidationRule>