Prod-EU/force-app/main/default/objects/Related_Account__c/validationRules/Check_If_Parent_Child_Are_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_If_Parent_Child_Are_Same</fullName>
    <active>true</active>
    <description>Both child and parent accounts cannot be one and the same</description>
    <errorConditionFormula>Child_Account__c =  Parent_Account__c</errorConditionFormula>
    <errorMessage>Both Parent and Child accounts cannot be one and the same.</errorMessage>
</ValidationRule>