Prod-EU/force-app/main/default/objects/Related_Account__c/validationRules/Check_Parent_Child_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Parent_Child_Country</fullName>
    <active>true</active>
    <description>Parent and Child account country should be the same.</description>
    <errorConditionFormula>TEXT(Child_Account__r.Country__c) !=  TEXT(Parent_Account__r.Country__c)</errorConditionFormula>
    <errorMessage>Parent and Child accounts should belong to the same country.</errorMessage>
</ValidationRule>