Prod-EU/force-app/main/default/objects/Related_Account__c/validationRules/Check_Pharmacy_To_Pharmacy_Assoc.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Pharmacy_To_Pharmacy_Assoc</fullName>
    <active>true</active>
    <description>Pharmacy can be associated to only Pharmacy</description>
    <errorConditionFormula>OR(
AND 
(Child_Relation_Type__c = &apos;Pharmacy&apos;,
 NOT(Parent_Relation_Type__c = &apos;Pharmacy&apos;)),
AND 
(NOT(Child_Relation_Type__c = &apos;Pharmacy&apos;),
 Parent_Relation_Type__c = &apos;Pharmacy&apos;)
)</errorConditionFormula>
    <errorMessage>Pharmacy can be associated to only Pharmacy accounts.</errorMessage>
</ValidationRule>