Prod-EU/force-app/main/default/objects/Related_Account__c/validationRules/Check_Prescriber_To_Payor_Assoc.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Prescriber_To_Payor_Assoc</fullName>
    <active>true</active>
    <description>Prescriber cannot be associated to Payor directly</description>
    <errorConditionFormula>AND 
(Child_Relation_Type__c = &apos;Prescriber&apos;,
 Parent_Relation_Type__c = &apos;Payor&apos;
)</errorConditionFormula>
    <errorMessage>Prescriber can be related to only Medical Facility or a Hospital.</errorMessage>
</ValidationRule>